--- a/modulo1/1.1-Recursividade.ipynb
+++ b/modulo1/1.1-Recursividade.ipynb
@@ -121,26 +121,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4d0c21b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 9 8 7 6 5 4 3 2 1 1 0 -1 -2 -3 -4 -5 20 19 18 17 "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Valores inválidos'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def imprimeIntervalo(n1, n2):\n",
     "    if n1 > n2:\n",
-    "        return \"Valores inválidos\"\n",
-    "    print(n1)\n",
-    "    if n1 == n2:\n",
-    "        return\n",
-    "    return imprimeIntervalo(n1 - 1, n2)\n",
+    "        return 'Valores inválidos'\n",
     "\n",
-    "print(\"Entrada 1:\")\n",
+    "    if n1 == n2:\n",
+    "        print(n1, end = ' ')\n",
+    "\n",
+    "    else:\n",
+    "        imprimeIntervalo(n1 + 1, n2)\n",
+    "        print(n1, end = ' ')\n",
+    "\n",
     "imprimeIntervalo(1,10)\n",
-    "print(\"\\nEntrada 2:\")\n",
     "imprimeIntervalo(-5,1)\n",
-    "print(\"\\nEntrada 3:\")\n",
     "imprimeIntervalo(17,20)\n",
-    "print(\"\\nEntrada 4:\")\n",
     "imprimeIntervalo(5,-5)"
    ]
   },
@@ -165,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "c4da98b8",
    "metadata": {},
    "outputs": [
@@ -184,7 +201,7 @@
     "        return \"Número inválido\"\n",
     "    \n",
     "    if n == 1:\n",
-    "        return 1\n",
+    "        return n\n",
     "    \n",
     "    return n + somaValores(n - 1)\n",
     "\n",
@@ -319,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "10df4831",
    "metadata": {},
    "outputs": [],
